PDF export of all results finished

--- a/src/templates/startlist/results_finished_startlists.html
+++ b/src/templates/startlist/results_finished_startlists.html
@@ -20,19 +20,12 @@
                 </tr>
                 </thead>
                 <tbody>
-                {% for last_name, first_name, time in startlist_result %}
+                {% for position, last_name, first_name, time in startlist_result %}
                 <tr>
-                    {% if time == "59:59.59" %}
-                    <td>DNF</td>
-                    <td><i>{{ last_name }}</i></td>
-                    <td><i>{{ first_name }}</i></td>
-                    <td> -</td>
-                    {% else %}
-                    <td>{{ loop.index }}</td>
+                    <td>{{ position }}</td>
                     <td>{{ last_name }}</td>
                     <td>{{ first_name }}</td>
                     <td>{{ time }}</td>
-                    {% endif %}
                 </tr>
                 {% endfor %}
                 </tbody>
