--- a/src/templates/startlist/results_finished_startlists_dev.html
+++ b/src/templates/startlist/results_finished_startlists_dev.html
@@ -3,8 +3,14 @@
 
 <div class="container">
 
-    <a href="{{ url_for('static', filename='download_folder/ranklist.txt') }}"> Rangliste - TXT version </a>
-
+    <a href="{{ url_for('static', filename='download_folder/ranklist.pdf') }}"> Rangliste - PDF Version </a>
+    <br>
+    <br>
+    <a href="{{ url_for('static', filename='download_folder/ranklist.txt') }}"> Rangliste - TXT Version </a>
+    <br>
+    <br>
+    Bitte beachte:  Um sicherzustellen, dass du immer die nue generierte Rangliste vom Browser bekommst, mach "forced Refresh" dieser Seite.
+    Beim Chrome und macOS: halte die CMD Taste und klicke an Refresh.
 </div>
 
 {% endblock %}
