--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -76,7 +76,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="{{ url_for('startlist.results')}}">List one</a></li>
                         <li><a href="{{ url_for('startlist.results_all')}}">List all</a></li>
-                        <li><a href="{{ url_for('startlist.results_all_dev')}}">List DEV</a></li>
+                        <li><a href="{{ url_for('startlist.results_all_export_files')}}">List to Files</a></li>
                     </ul>
                 </li>
 
