--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -30,7 +30,7 @@
 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Participants <span class="caret"></span></a>
+                       aria-expanded="false">Athletes <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="{{ url_for('participants.add')}}">Add one</a></li>
                         <li><a href="{{ url_for('participants.mass_import')}}">Add many</a></li>
@@ -53,12 +53,13 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Startlist <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('startlist.create_startlist_category')}}">Create new - category</a></li>
-                        <li><a href="{{ url_for('startlist.create_startlist_classification')}}">Create new - classification</a></li>
-                        <li><a href="{{ url_for('startlist.startlist_menu')}}">List one</a></li>
-                        <li><a href="{{ url_for('startlist.startlist')}}">List all</a></li>
+                        <li><a href="{{ url_for('startlist.create_startlist_category')}}">Create new - Round 1</a></li>
+                        <li><a href="{{ url_for('startlist.create_startlist_classification')}}">Create new - Final</a></li>
+                        <li><a href="{{ url_for('startlist.startlist_menu')}}">Show one</a></li>
+                        <li><a href="{{ url_for('startlist.startlist')}}">Show all</a></li>
                         <li><a href="{{ url_for('startlist.startlist_menu_edit')}}">Edit one</a></li>
-                        <li><a href="{{ url_for('startlist.add_time')}}">Add Time to Runner</a></li>
+                        <li><a href="{{ url_for('startlist.startlist')}}">Export all - Round 1</a></li>
+                        <li><a href="{{ url_for('startlist.startlist')}}">Export all - Final</a></li>
                     </ul>
                 </li>
 
@@ -76,7 +77,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="{{ url_for('startlist.results')}}">List one</a></li>
                         <li><a href="{{ url_for('startlist.results_all')}}">List all</a></li>
-                        <li><a href="{{ url_for('startlist.results_all_export_files')}}">List to Files</a></li>
+                        <li><a href="{{ url_for('startlist.results_all_export_files')}}">Export all results</a></li>
                     </ul>
                 </li>
 
