Prepare WebUI or startlist show all development

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -55,6 +55,7 @@
                         <li><a href="{{ url_for('startlist.create_startlist_classification')}}">Create new - Final</a></li>
                         <li><a href="{{ url_for('startlist.startlist_menu')}}">Show one</a></li>
                         <li><a href="{{ url_for('startlist.startlist')}}">Show all</a></li>
+                        <li><a href="{{ url_for('startlist.startlist_all_dev')}}">Show all DEV</a></li>
                         <li><a href="{{ url_for('startlist.startlist_menu_edit')}}">Edit one</a></li>
                         <li><a href="{{ url_for('startlist.startlist_export_round1')}}">Export all - Round 1</a></li>
                         <li><a href="{{ url_for('startlist.startlist_export_final')}}">Export all - Final</a></li>
