--- a/src/templates/startlist/startlist_export_round1.html
+++ b/src/templates/startlist/startlist_export_round1.html
@@ -10,7 +10,7 @@
     <br>
     <br>
     Bitte beachte:  Um sicherzustellen, dass du immer die nue generierte Rangliste vom Browser bekommst, mach "forced Refresh" dieser Seite.
-    Beim Chrome und macOS: halte die CMD Taste und klicke an Refresh.
+    Beim Chrome und macOS: halte die CTRL Taste und klicke an Refresh.
 </div>
 
 {% endblock %}
