--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -58,6 +58,7 @@
                         <li><a href="{{ url_for('startlist.startlist_show_final')}}">Show - Final</a></li>
                         <li><a href="{{ url_for('startlist.startlist')}}">Show - All</a></li>
                         <li><a href="{{ url_for('startlist.startlist_menu_edit')}}">Edit one</a></li>
+                        <li><a href="{{ url_for('startlist.startlist_menu_rename')}}">Rename one</a></li>
                         <li><a href="{{ url_for('startlist.startlist_export_round1')}}">Export - Round 1</a></li>
                         <li><a href="{{ url_for('startlist.startlist_export_final')}}">Export - Final</a></li>
                     </ul>
