--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -87,9 +87,8 @@
 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Experimental <span class="caret"></span></a>
+                       aria-expanded="false">Admin <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('timedb.list')}}">List</a></li>
                         <li><a href="{{ url_for('participants.delete_admin')}}">Delete Zone</a></li>
                     </ul>
                 </li>
