Edit of a category works

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -41,9 +41,10 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Categories <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('categories.add')}}">Add one</a></li>
-                        <li><a href="{{ url_for('categories.show_categories_to_delete')}}">Delete one</a></li>
-                        <li><a href="{{ url_for('categories.list')}}">List all</a></li>
+                        <li><a href="{{ url_for('categories.add')}}">Add - One</a></li>
+                        <li><a href="{{ url_for('categories.show_categories_to_edit')}}">Edit - One</a></li>
+                        <li><a href="{{ url_for('categories.show_categories_to_delete')}}">Delete - One</a></li>
+                        <li><a href="{{ url_for('categories.list')}}">List - All</a></li>
                     </ul>
                 </li>
 
