Export of results for round1 and final separatelly now works

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -89,6 +89,8 @@
                         <li><a href="{{ url_for('startlist.results_round1')}}">Show - Round1</a></li>
                         <li><a href="{{ url_for('startlist.results_final')}}">Show - Final</a></li>
                         <li><a href="{{ url_for('startlist.results_all')}}">Show - All</a></li>
+                        <li><a href="{{ url_for('startlist.results_round1_export_files')}}">Export - Round1</a></li>
+                        <li><a href="{{ url_for('startlist.results_final_export_files')}}">Export - Final</a></li>
                         <li><a href="{{ url_for('startlist.results_all_export_files')}}">Export - All</a></li>
                     </ul>
                 </li>
