Edit names in the dropdown menu

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -65,9 +65,9 @@
                         <li><a href="{{ url_for('startlist.startlist_show_round1')}}">Show - Round1</a></li>
                         <li><a href="{{ url_for('startlist.startlist_show_final')}}">Show - Final</a></li>
                         <li><a href="{{ url_for('startlist.startlist')}}">Show - All</a></li>
-                        <li><a href="{{ url_for('startlist.startlist_menu_edit')}}">Edit one</a></li>
-                        <li><a href="{{ url_for('startlist.startlist_menu_rename')}}">Rename one</a></li>
-                        <li><a href="{{ url_for('startlist.startlist_menu_delete')}}">Delete one</a></li>
+                        <li><a href="{{ url_for('startlist.startlist_menu_edit')}}">Edit - One</a></li>
+                        <li><a href="{{ url_for('startlist.startlist_menu_rename')}}">Rename - One</a></li>
+                        <li><a href="{{ url_for('startlist.startlist_menu_delete')}}">Delete - One</a></li>
                         <li><a href="{{ url_for('startlist.startlist_export_round1')}}">Export - Round 1</a></li>
                         <li><a href="{{ url_for('startlist.startlist_export_final')}}">Export - Final</a></li>
                     </ul>
