Fix typo in file download subpages

--- a/src/templates/startlist/results_finished_export_files_all.html
+++ b/src/templates/startlist/results_finished_export_files_all.html
@@ -9,7 +9,7 @@
     <a href="{{ url_for('static', filename='download_folder/ranklist_all.txt') }}"> Rangliste - TXT Version </a>
     <br>
     <br>
-    Bitte beachte:  Um sicherzustellen, dass du immer die nue generierte Rangliste vom Browser bekommst, mach "forced Refresh" dieser Seite.
+    Bitte beachte:  Um sicherzustellen, dass du immer die neu generierte Rangliste vom Browser bekommst, mach "forced Refresh" von dieser Seite.
     Beim Chrome und macOS: halte die CTRL Taste und klicke an Refresh.
 </div>
 
