--- a/src/templates/startlist/startlist_export_round1.html
+++ b/src/templates/startlist/startlist_export_round1.html
@@ -9,7 +9,7 @@
     <a href="{{ url_for('static', filename='download_folder/startlist_round1.txt') }}"> Startliste - TXT Version </a>
     <br>
     <br>
-    Bitte beachte:  Um sicherzustellen, dass du immer die nue generierte Rangliste vom Browser bekommst, mach "forced Refresh" dieser Seite.
+    Bitte beachte:  Um sicherzustellen, dass du immer die neu generierte Rangliste vom Browser bekommst, mach "forced Refresh" von dieser Seite.
     Beim Chrome und macOS: halte die CTRL Taste und klicke an Refresh.
 </div>
 
