--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -100,6 +100,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Admin <span class="caret"></span></a>
                     <ul class="dropdown-menu">
+                        <li><a href="{{ url_for('documentation')}}">Documentation</a></li>
                         <li><a href="{{ url_for('participants.delete_admin')}}">Delete Zone</a></li>
                     </ul>
                 </li>
