--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -5,9 +5,10 @@
     <div id="wrapper">
         <div class="jumbotron">
             <h1>TrackTime</h1>
-            <p>Flask web application designed for UZE Sprinter event.</p>
+            <p>Time, start list and results management specifically streamlined for UZE Sprinter event.</p>
+            <p>Flask web application.</p>
             <p>Author: Frantisek Janus</p>
-            <p>2017</p>
+            <p>2018</p>
             <!--<p><a class="btn btn-primary btn-lg" href="/signup" role="button">Signup</a></p>-->
         </div>
     </div>
