--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -86,7 +86,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Results <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('startlist.results')}}">Show one</a></li>
+                        <li><a href="{{ url_for('startlist.results')}}">Show - One</a></li>
                         <li><a href="{{ url_for('startlist.results_round1')}}">Show - Round1</a></li>
                         <li><a href="{{ url_for('startlist.results_final')}}">Show - Final</a></li>
                         <li><a href="{{ url_for('startlist.results_all')}}">Show - All</a></li>
