--- a/src/templates/participants/mass_import.html
+++ b/src/templates/participants/mass_import.html
@@ -41,7 +41,7 @@
                         <div class="form-group">
                             <label for="InputFile">Select file</label>
                             <input type="file" id="InputFile" name="InputFile" >
-                            <p class="help-block">Supported formats: .xls, .xlsx, .csv</p>
+                            <p class="help-block">Supported formats: .xls, .xlsx</p>
                         </div>
 
                         <button type="submit" class="btn btn-success"><span class="fa fa-check"></span>
