Add feature - response directly with a pdf document

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -70,7 +70,9 @@
                         <li><a href="{{ url_for('startlist.startlist_menu_rename')}}">Rename - One</a></li>
                         <li><a href="{{ url_for('startlist.startlist_menu_delete')}}">Delete - One</a></li>
                         <li><a href="{{ url_for('startlist.startlist_export_round1')}}">Export - Round 1</a></li>
+                        <li><a href="{{ url_for('startlist.startlist_round1_export_to_pdf')}}">Export - Round 1 - Download</a></li>
                         <li><a href="{{ url_for('startlist.startlist_export_final')}}">Export - Final</a></li>
+                        <li><a href="{{ url_for('startlist.startlist_final_export_to_pdf')}}">Export - Final - Download</a></li>
                     </ul>
                 </li>
 
@@ -91,8 +93,11 @@
                         <li><a href="{{ url_for('startlist.results_final')}}">Show - Final</a></li>
                         <li><a href="{{ url_for('startlist.results_all')}}">Show - All</a></li>
                         <li><a href="{{ url_for('startlist.results_round1_export_files')}}">Export - Round1</a></li>
+                        <li><a href="{{ url_for('startlist.results_round1_export_to_pdf')}}">Export - Round1 - Download</a></li>
                         <li><a href="{{ url_for('startlist.results_final_export_files')}}">Export - Final</a></li>
+                        <li><a href="{{ url_for('startlist.results_final_export_to_pdf')}}">Export - Final - Download</a></li>
                         <li><a href="{{ url_for('startlist.results_all_export_files')}}">Export - All</a></li>
+                        <li><a href="{{ url_for('startlist.results_all_export_to_pdf')}}">Export - All - Download</a></li>
                     </ul>
                 </li>
 
